# SpectraCorr

./: pyproject.toml  spectracorr.py
.github/workflows/: python-package.yml
core/: Spectrum.py  spectrum.py
generators/: BaseGenerator.py  GaussianGenerator.py  LorentzianGenerator.py  base_generator.py  gaussian_generator.py  lorentzian_generator.py
io/parsers/: OrcaParser.py
sc_io/exporters/: CsvExporter.py  JsonExporter.py
sc_io/parsers/: CsvParser.py  OrcaParser.py
spectracorr/: __init__.py
tests/: conftest.py  test_exporters.py  test_orca_parser.py  test_parsers.py  test_spectracorr.py  test_spectrum.py
