[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectracorr"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spectracorr", "sc_io", "core", "generators"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}